--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
   <!-- https://emmet.io/ -->
   <!-- header>h1{Test de menu} -->
   <header>
-    <button aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menu-Btn">Menu</button>
-    <h1>Test de menu</h1>
-    <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu">
-
+    <a href='/'>
+      <img class="house" src="public/icones/house.svg" alt="Accueil">
+      <article>
+    </a>
+    <img src="public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav"
+      @click="menuIsOpen = ! menuIsOpen" x-show="! menuIsOpen" class="header__menu-Btn">
+    <img src="public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav"
+      @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
+    <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
         <li><a href="cats/index.html" class="cat">Les chats</a></li>
         <li><a href="dogs/index.html" class="dog">Les chiens</a></li>
