--- a/fr/cats/index.html
+++ b/fr/cats/index.html
@@ -6,25 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Les chats !</title>
-  <link rel="icon" href='/public/icones/animals.svg'>
-  <link rel="stylesheet" href="../src/css/styles.css">
+  <link rel="icon" href="/public/icones/animals.svg">
+  <link rel="stylesheet" href="/src/css/styles.css">
   <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
 <body>
   <header>
-    <a href='/'>
-      <img class="house" src="../public/icones/house.svg" alt="Accueil">
+    <a href="/">
+      <img class="house" src="/public/icones/house.svg" alt="Accueil">
       <article>
     </a>
-    <img src="../public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav"
+    <img src="/public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav"
       @click="menuIsOpen = ! menuIsOpen" x-show="! menuIsOpen" class="header__menu-Btn">
-    <img src="../public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav"
+    <img src="/public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav"
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href='/cats/' class="cat">Les chats</a></li>
-        <li><a href='/dogs/' class="dog">Les chiens</a></li>
+        <li><a href="/fr/cats/index.html" class="cat">Les chats</a></li>
+        <li><a href="/fr/dogs/index.html" class="dog">Les chiens</a></li>
       </ul>
     </nav>
     </nav>
@@ -36,16 +36,16 @@
 
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eaque tenetur quam totam, voluptatem veritatis quo
     doloribus fuga, modi voluptates, culpa aut unde? Laborum, qui perspiciatis. Harum sunt labore inventore.</p>
-  <a href='/cats/chat-1.html'>
+  <a href="/fr/cats/chat-1.html">
     <h3 class="click">Voir nos chats</h3>
   </a>
   <section class="container">
-    <img class="image" src='/public/img/cats/pexels-amber-janssens-6897077.jpg' alt="image de chat">
-    <img class="image" src="../public/img/cats/borna-bevanda-VwqecUsYKvs-unsplash.jpg" alt="image de chat">
+    <img class="image" src="/public/img/cats/pexels-amber-janssens-6897077.jpg" alt="image de chat">
+    <img class="image" src="/public/img/cats/borna-bevanda-VwqecUsYKvs-unsplash.jpg" alt="image de chat">
   </section>
   <h2 class="title">Nous avons aussi des chiens</h2>
-  <a href='/dogs/'>
-    <h3 class="click">Voir nos chiens</h3>
+  <a href="/fr/dogs/index.html"">
+    <h3 class=" click">Voir nos chiens</h3>
   </a>
 </body>
 
