--- a/fr/dogs/chien-2.html
+++ b/fr/dogs/chien-2.html
@@ -6,25 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Les chiens !</title>
-  <link rel="icon" href='/public/icones/animals.svg'>
-  <link rel="stylesheet" href="../src/css/styles.css">
+  <link rel="icon" href="/public/icones/animals.svg">
+  <link rel="stylesheet" href="/src/css/styles.css">
   <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
 <body>
   <header>
-    <a href='/'>
-      <img class="house" src="../public/icones/house.svg" alt="Accueil">
+    <a href="/">
+      <img class="house" src="/public/icones/house.svg" alt="Accueil">
       <article>
     </a>
-    <img src="../public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav"
+    <img src="/public/icones/Hamburger.svg" alt="icone du menu" aria-controls="mainNav"
       @click="menuIsOpen = ! menuIsOpen" x-show="! menuIsOpen" class="header__menu-Btn">
-    <img src="../public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav"
+    <img src="/public/icones/croix.svg" alt="Icone de fermeture" aria-controls="mainNav"
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href='/cats/' class="cat">Les chats</a></li>
-        <li><a href='/dogs/' class="dog">Les chiens</a></li>
+        <li><a href="/fr/cats/index.html" class="cat">Les chats</a></li>
+        <li><a href="/fr/dogs/index.html" class="dog">Les chiens</a></li>
       </ul>
     </nav>
     </nav>
@@ -34,14 +34,14 @@
   <p>Ce sont des chiens qui sont originairement des chiens de traîneau. </p>
 
   <section class="container">
-    <img class="image" src="../public/img/dogs/pexels-antonio-florentini-803766.jpg" alt="image de chien">
-    <img class="image" src="../public/img/dogs/pexels-rattasat-2802418.jpg" alt="image de chien">
+    <img class="image" src="/public/img/dogs/pexels-antonio-florentini-803766.jpg" alt="image de chien">
+    <img class="image" src="/public/img/dogs/pexels-rattasat-2802418.jpg" alt="image de chien">
   </section>
-  <a href="../dogs/chien-1.html">
+  <a href="/fr/dogs/chien-1.html">
     <p class="click">Précédent</p>
   </a>
   <h2 class="title">Nous avons aussi des chats</h2>
-  <a href='/cats/'>
+  <a href="/fr/cats/index.html">
     <p class="click">Voir nos chats</p>
   </a>
 </body>
