--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- https://emmet.io/ -->
   <!-- header>h1{Test de menu} -->
   <header>
-    <a href='/'>
+    <a href="/">
       <img class="house" src="public/icones/house.svg" alt="Accueil">
       <article>
     </a>
@@ -25,8 +25,8 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="fr/cats/index.html" class="cat">Les chats</a></li>
+        <li><a href="fr/dogs/index.html" class="dog">Les chiens</a></li>
       </ul>
     </nav>
     </nav>
