--- a/en/cats/chat-1.html
+++ b/en/cats/chat-1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
+<html lang="en" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Les chats !</title>
+  <title>Cats !</title>
   <link rel="icon" href="/public/icones/animals.svg">
   <link rel="stylesheet" href="/src/css/styles.css">
   <script defer src="https://unpkg.com/alpinejs"></script>
@@ -23,21 +23,21 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="/en/cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="/en/dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="/en/cats/index.html" class="cat">Cats</a></li>
+        <li><a href="/en/dogs/index.html" class="dog">Dogs</a></li>
       </ul>
     </nav>
     </nav>
     </article>
   </header>
-  <h1>Les chats écaille de tortue</h1>
-  <p>Le saviez vous? Les chat avec cette couleur de robe sont presque exclusivement des femelles</p>
+  <h1>Tortoiseshell cats</h1>
+  <p>Did you know? Cats with this coat color are almost exclusively female.</p>
 
   <section class="container">
     <img class="image" src="/public/img/cats/gabriella-clare-marino-tuQ5_6QJUTM-unsplash.jpg" alt="image de chat">
     <img class="image" src="/public/img/cats/pexels-just-a-couple-photos-3777622.jpg" alt="image de chat">
   </section><a href="/en/cats/chat-2.html">
-    <p class="click">Suivant</p>
+    <p class="click">Next</p>
   </a>
 </body>
 
