--- a/en/cats/chat-2.html
+++ b/en/cats/chat-2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
+<html lang="en" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Les chats !</title>
+  <title>Cats !</title>
   <link rel="icon" href="/public/icones/animals.svg">
   <link rel="stylesheet" href="/src/css/styles.css">
   <script defer src="https://unpkg.com/alpinejs"></script>
@@ -23,26 +23,26 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="/en/cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="/en/dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="/en/cats/index.html" class="cat">Cats</a></li>
+        <li><a href="/en/dogs/index.html" class="dog">Dogs</a></li>
       </ul>
     </nav>
     </nav>
     </article>
   </header>
-  <h1>Les chats</h1>
-  <p>Fun fact : Les chats passent environ 16h par jour à dormir</p>
+  <h1>Cats</h1>
+  <p>Fun fact: Cats spend around 16 hours a day sleeping</p>
 
   <section class="container">
     <img class="image" src="/public/img/cats/wren-meinberg-AL2-t0GrSko-unsplash.jpg" alt="image de chat">
     <img class="image" src="/public/img/cats/pexels-wojciech-kumpicki-2071882.jpg" alt="image de chat">
   </section>
   <a href="/en/cats/chat-1.html">
-    <p class="click">Précédent</p>
+    <p class="click">Previous</p>
   </a>
-  <h2 class="title">Nous avons aussi des chiens !</h2>
+  <h2 class="title">We also have dogs!</h2>
   <a href="/en/dogs/index.html">
-    <p class="click">Voir nos chiens</p>
+    <p class="click">See our dogs</p>
   </a>
 
 </body>
