--- a/en/dogs/chien-1.html
+++ b/en/dogs/chien-1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
+<html lang="en" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Les chiens !</title>
+  <title>Dogs !</title>
   <link rel="icon" href="/public/icones/animals.svg">
   <link rel="stylesheet" href="/src/css/styles.css">
   <script defer src="https://unpkg.com/alpinejs"></script>
@@ -23,22 +23,24 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="/en/cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="/en/dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="/en/cats/index.html" class="cat">Cats</a></li>
+        <li><a href="/en/dogs/index.html" class="dog">Dogs</a></li>
       </ul>
     </nav>
     </nav>
     </article>
   </header>
-  <h1>Les teckels</h1>
-  <p>Parlons du chien saucisse ! Le surnom du Teckel vient de son corps fin et long, couplé à ses petites pattes.</p>
+  <h1>Dachshunds</h1>
+  <p>Let’s talk about the sausage dog! The Dachshund's nickname comes from its thin and long body, coupled with its
+    small
+    legs.</p>
 
   <section class="container">
     <img class="image" src="/public/img/dogs/lovovna-6DotGLw-tY8-unsplash.jpg" alt="image de chien">
     <img class="image" src="/public/img/dogs/pexels-dominika-roseclay-2679612.jpg" alt="image de chien">
   </section>
   <a href="/en/dogs/chien-2.html">
-    <p class="click">Suivant</p>
+    <p class="click">Next</p>
   </a>
 </body>
 
