--- a/en/dogs/chien-2.html
+++ b/en/dogs/chien-2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
+<html lang="en" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Les chiens !</title>
+  <title>Dogs !</title>
   <link rel="icon" href="/public/icones/animals.svg">
   <link rel="stylesheet" href="/src/css/styles.css">
   <script defer src="https://unpkg.com/alpinejs"></script>
@@ -23,26 +23,26 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="/en/cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="/en/dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="/en/cats/index.html" class="cat">Cats</a></li>
+        <li><a href="/en/dogs/index.html" class="dog">Dogs</a></li>
       </ul>
     </nav>
     </nav>
     </article>
   </header>
-  <h1>Les huskys Sibériens</h1>
-  <p>Ce sont des chiens qui sont originairement des chiens de traîneau. </p>
+  <h1>Siberian huskies</h1>
+  <p>These are dogs that were originally sled dogs. </p>
 
   <section class="container">
     <img class="image" src="/public/img/dogs/pexels-antonio-florentini-803766.jpg" alt="image de chien">
     <img class="image" src="/public/img/dogs/pexels-rattasat-2802418.jpg" alt="image de chien">
   </section>
   <a href="/en/dogs/chien-1.html">
-    <p class="click">Précédent</p>
+    <p class="click">Previous</p>
   </a>
-  <h2 class="title">Nous avons aussi des chats</h2>
+  <h2 class="title">We also have cats</h2>
   <a href="/en/cats/index.html">
-    <p class="click">Voir nos chats</p>
+    <p class="click">See our catss</p>
   </a>
 </body>
 
