--- a/en/dogs/index.html
+++ b/en/dogs/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
+<html lang="en" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Les chiens !</title>
+  <title>Dogs !</title>
   <link rel="icon" href="/public/icones/animals.svg">
   <link rel="stylesheet" href="/src/css/styles.css">
   <script defer src="https://unpkg.com/alpinejs"></script>
@@ -23,29 +23,29 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="/en/cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="/en/dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="/en/cats/index.html" class="cat">Cats</a></li>
+        <li><a href="/en/dogs/index.html" class="dog">Dogs</a></li>
       </ul>
     </nav>
     </nav>
     </article>
   </header>
-  <h1>Les chiens</h1>
+  <h1>Dogs</h1>
 
 
 
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eaque tenetur quam totam, voluptatem veritatis quo
     doloribus fuga, modi voluptates, culpa aut unde? Laborum, qui perspiciatis. Harum sunt labore inventore.</p>
   <a href="/en/dogs/chien-1.html">
-    <h3 class="click">Voir nos chiens</h3>
+    <h3 class="click">See our dogs</h3>
   </a>
   <section class="container">
     <img class="image" src="/public/img/dogs/pexels-pixabay-220938.jpg" alt="image de chien">
     <img class="image" src="/public/img/dogs/taylor-kopel-WX4i1Jq_o0Y-unsplash.jpg" alt="image de chien">
   </section>
-  <h2 class="title">Nous avons aussi des chats</h2>
+  <h2 class="title">We also have cats</h2>
   <a href="/en/cats/index.html">
-    <h3 class="click">Voir nos chats</h3>
+    <h3 class="click">See our cats</h3>
   </a>
 
 </body>
