--- a/en/index.html
+++ b/en/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
+<html lang="en" x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen}">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Test menu</title>
+  <title>Pets</title>
   <link rel="icon" href='/public/icones/animals.svg'>
   <link rel="stylesheet" href="/src/css/styles.css">
   <script defer src="https://unpkg.com/alpinejs"></script>
@@ -25,15 +25,15 @@
       @click="menuIsOpen = ! menuIsOpen" x-show="menuIsOpen" class="header__menu-Btn">
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duraion.800ms class="menu" style="display : none">
       <ul>
-        <li><a href="/en/cats/index.html" class="cat">Les chats</a></li>
-        <li><a href="/en/dogs/index.html" class="dog">Les chiens</a></li>
+        <li><a href="/en/cats/index.html" class="cat">Cats</a></li>
+        <li><a href="/en/dogs/index.html" class="dog">Dogs</a></li>
       </ul>
     </nav>
     </nav>
     </article>
   </header>
 
-  <h1>Animaux de compagnie</h1>
+  <h1>Pets</h1>
   <p>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat
     mollitia adipisci alias quibusdam, voluptates, quidem, quas
@@ -44,7 +44,7 @@
   </section>
 
   <!-- h2>lorem2^p>lorem -->
-  <h2>Acordeon</h2>
+  <h2>Accordion</h2>
 
   <dl x-data="{ddlorem: false}">
 
